[package]
name = "ffmpeg"
description = "Use ffmpeg libraries in rust!"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cosmicexplorer/ffmpeg-rs"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto                     = true

[workspace]
resolver = "2"
members = [".", "./sys"]
default-members = ["."]

[dependencies]
ffmpeg-sys = { path = "./sys" }

[features]
default = [
    "libavcodec",
    "libavdevice",
    "libavfilter",
    "libavformat",
    "libavutil",
    "libpostproc",
    "libswresample",
    "libswscale",
  ]

# Platform support.
linux = ["ffmpeg-sys/linux"]
wasm = ["ffmpeg-sys/wasm"]

# Modules to enable.
libavcodec = ["ffmpeg-sys/libavcodec"]
libavdevice = ["ffmpeg-sys/libavdevice"]
libavfilter = ["ffmpeg-sys/libavfilter"]
libavformat = ["ffmpeg-sys/libavformat"]
libavutil = ["ffmpeg-sys/libavutil"]
libpostproc = ["ffmpeg-sys/libpostproc"]
libswresample = ["ffmpeg-sys/libswresample"]
libswscale = ["ffmpeg-sys/libswscale"]
