[package]
name = "ffmpeg-sys"
description = "Rust bindings to ffmpeg!"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cosmicexplorer/ffmpeg-rs"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.59.2"
cfg-if = "1.0.0"
spack = { git = "https://github.com/cosmicexplorer/spack-rs", rev = "c4856a01ef2548b2cfe8e0ba528717a998c2ca8b" }
# spack = { path = "/home/cosmicexplorer/tools/spack-rs" }
tokio = { version = "1.17.0", features = ["full"] }

[dependencies]
cfg-if = "1.0.0"

[features]
default = [
    "libavcodec",
    "libavdevice",
    "libavfilter",
    "libavformat",
    "libavutil",
    "libpostproc",
    "libswresample",
    "libswscale",
  ]

# Platform support.
wasm = []

# Modules to enable.
libavcodec = []
libavdevice = []
libavfilter = []
libavformat = []
libavutil = []
libpostproc = []
libswresample = []
libswscale = []
